--- a/index.html
+++ b/index.html
@@ -27,10 +27,16 @@
 	</head>
 	<body class="w-full min-h-screen mx-auto font-raleway">
 		<!-- header section -->
-		<header class="space-y-12 mx-32">
+		<header id="header-id" class="space-y-12 mx-32">
 			<div class="flex justify-between mt-10">
 				<div class="title-text text-4xl font-extrabold text-gray-900">
 					T-Tickets
+				</div>
+				<div class="flex justify-center gap-20">
+					<button class="btn text-lg text-gray-700">Home</button>
+					<button class="btn text-lg text-gray-700">About</button>
+					<button class="btn text-lg text-gray-700">Destination</button>
+					<button class="btn text-lg text-gray-700">Search</button>
 				</div>
 				<div>
 					<button
